Beta 0.19.0 Agregando dones y campos para formación.

--- a/datas/formacion.html
+++ b/datas/formacion.html
@@ -1,6 +1,13 @@
+<!DOCTYPE html>
+<html lang="es" class="scheme_original">
+<head>
+    <title>Descubre tu propósito, conociendo tu F.O.R.M.A &#8211; Quiero Servir &#8211; Iglesia Vida Real</title>
+    <meta name='robots' content='max-image-preview:large'/>
+    <meta charset="UTF-8"/>
+</head>
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"
-         style="padding: 0px !important;">
+         style="padding: 0 !important;">
 
 
         <table class="table table-bordered table-striped table-hover">
@@ -3548,3 +3555,4 @@
 
     </div>
 </div>
+</html>
